RiemannWeb/wwwroot/css/site.css
html {
    overflow-x: hidden;
}

a.navbar-brand {
    white-space: normal;
    text-align: center;
    word-break: break-all;
}

a {
    cursor: pointer !important;
}

.link-color {
    color: #7af !important;
}

.content {
    width: 1000px;
    margin: auto;
}

.button {
    height: 50px;
    border-radius: 0;
}

.fullscreen {
    position: absolute;
    top: 55px;
    bottom: 54px;
    left: 0;
    right: 0;
}

.fullscreen #controls {
    width: 150px;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
}

.fullscreen #controls .button {
    width: 150px;
    margin: 0;
}

.fullscreen #controls #calculate {
    display: none;
}

.fullscreen #help {
    display: none;
    width: 350px;
    min-height: 100%;
    padding: 30px;
    text-align: justify;
    position: absolute;
    top: 0;
    right: 0;
}

.fullscreen #helpButton {
    width: 80px;
    height: 40px;
    border-top-left-radius: 10px;
    position: fixed;
    bottom: 54px;
    right: 0;
}

.fullscreen .capture {
    width: 100%;
    height: 100%;
}

.fullscreen #upload {
    max-width: 100%;
    max-height: 100%;
    width: auto;
    margin: auto;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.fullscreen canvas {
    display: none;
    min-height: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.remove {
    display: inline-block;
    width: 70px;
}

#errorMsg {
    display: none;
    border-radius: 20px;
    position: absolute;
    width: 300px;
    padding: 20px;
    margin: auto;
    left: 0;
    right: 0;
    top: 150px;
    text-align: justify;
}

.page-center {
    margin-top: 15vh;
    height: 600px;
}

.left {
    display: block;
    float: left;
    width: 50%;
    margin-bottom: 100px;
}

.right {
    border-left: 5px solid #77c2ff;
    border-bottom: 5px solid #77a6ff;
    border-bottom-left-radius: 25px;
    display: block;
    float: right;
    width: 50%;
    height: 100%;
    padding-top: 10%;
    opacity: 0;
}

.feature {
    margin-top: 16%;
    width: 90%;
    opacity: 0;
}

.feature div {
    margin-left: 105px;
}

.feature img {
    width: 80px;
    float: left;
    margin: 10px;
    margin-top: 0;
}

#start-button {
    display: block;
    width: 350px;
    margin: auto;
    margin-top: 15vh;
    padding: 10px;
    border-top: 5px solid #77a6ff;
    border-right: 5px solid #77c2ff;
    border-top-right-radius: 20px;
    opacity: 0;
}

footer {
    background-color: #fff;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 15px 0;
}

@media screen and (max-width: 1000px), (max-height: 800px) {
    .content {
        width: 600px;
    }
    .page-center {
        margin-top: 5vh;
    }
    .right {
        width: 100%;
        height: 30%;
        padding: 0;
    }
    .left {
        width: 100%;
        padding: 0 5%;
    }
    #start-button {
        width: 300px;
        margin-top: 5%;
    }
    .feature {
        margin-top: 10%;
    }
    .fullscreen canvas {
        left: 0;
        top: 50px;
    }
    .fullscreen #controls {
        width: 100%;
        height: 50px;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
    }
    .remove {
        width: 50px;
    }
}

@media screen and (max-width: 600px) {
    .content {
        width: 350px;
    }
    .right {
        height: auto;
        padding-bottom: 5%;
    }
    .right h2 {
        font-size: 26px;
    }
    .feature div {
        margin-left: 70px;
    }
    .feature img {
        width: 60px;
        margin: 5px;
        margin-top: 0;
    }
    .fullscreen {
        bottom: 24px;
    }
    .fullscreen #helpButton {
        bottom: 24px;
    }
    .fullscreen #help {
        width: 100%;
        padding: 30px;
        left: 0;
    }
    footer {
        padding: 0;
    }
}

